--- a/New code/DCSS/Deterministic Column Subset Selection.ipynb
+++ b/New code/DCSS/Deterministic Column Subset Selection.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 493,
    "id": "85d06651",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,6 @@
      "text": [
       "(6, 20)\n",
       "[4. 4. 3. 2. 4. 3.]\n",
-      "(6, 20)\n",
       "[[0. 0. 1. 0. 1. 0.]\n",
       " [1. 0. 1. 0. 0. 0.]\n",
       " [0. 1. 0. 1. 0. 0.]\n",
@@ -199,11 +198,102 @@
     "dcss1 = supposedDCSS(red.T, k, epsilon = 0.1)\n",
     "print(dcss1[0].shape)\n",
     "print(sum(red[dcss1[2],:]))\n",
+    "print(red[dcss1[2],:])\n",
     "\n",
-    "\n",
-    "dcss2 = homemade_DCSS(red.T, k, epsilon = 0.1)\n",
-    "print(dcss2[0].shape)\n",
-    "print(red[dcss2[2],:])"
+    "#dcss2 = homemade_DCSS(red.T, k, epsilon = 0.1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 490,
+   "id": "64087cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 1., 1., 1., 1.],\n",
+       "       [0., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 0.],\n",
+       "       [1., 1., 1., 1., 0., 1.],\n",
+       "       [1., 1., 0., 1., 1., 1.],\n",
+       "       [1., 1., 1., 0., 1., 1.],\n",
+       "       [0., 0., 1., 1., 1., 1.],\n",
+       "       [1., 0., 1., 1., 1., 0.],\n",
+       "       [1., 0., 1., 1., 0., 1.],\n",
+       "       [0., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 1.],\n",
+       "       [0., 1., 0., 1., 1., 1.],\n",
+       "       [0., 0., 1., 1., 1., 0.],\n",
+       "       [1., 0., 1., 1., 0., 0.],\n",
+       "       [1., 0., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 0., 1.],\n",
+       "       [0., 1., 0., 1., 1., 0.],\n",
+       "       [0., 1., 0., 0., 1., 1.],\n",
+       "       [0., 0., 1., 1., 0., 0.]])"
+      ]
+     },
+     "execution_count": 490,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dcss1[0].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 483,
+   "id": "4560d881",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 0., 1.],\n",
+       "       [1., 0., 1., 1., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 0., 1., 0., 1., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 1., 0., 0.],\n",
+       "       [1., 0., 1., 0., 1., 1.],\n",
+       "       [0., 1., 0., 0., 0., 1.],\n",
+       "       [0., 1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 1., 1., 0., 0.],\n",
+       "       [1., 1., 1., 0., 1., 1.],\n",
+       "       [1., 0., 1., 1., 1., 1.],\n",
+       "       [0., 1., 0., 1., 1., 1.],\n",
+       "       [1., 0., 0., 1., 0., 1.],\n",
+       "       [0., 0., 1., 1., 1., 1.],\n",
+       "       [0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 1., 1.],\n",
+       "       [1., 0., 1., 0., 0., 1.],\n",
+       "       [1., 0., 1., 1., 0., 1.],\n",
+       "       [0., 1., 1., 1., 0., 1.],\n",
+       "       [1., 0., 1., 1., 1., 0.],\n",
+       "       [1., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 1., 0.],\n",
+       "       [1., 1., 0., 1., 1., 1.],\n",
+       "       [0., 0., 1., 1., 1., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0., 1., 0.],\n",
+       "       [1., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 483,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "red"
    ]
   },
   {
