KmerSieve prototype for sequence search

--- a/New code/CliqueMaking/Making cliques.ipynb
+++ b/New code/CliqueMaking/Making cliques.ipynb
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 17,
    "id": "d9f82475",
    "metadata": {},
    "outputs": [],
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 18,
    "id": "134923a8",
    "metadata": {},
    "outputs": [
@@ -1181,17 +1181,24 @@
       "For threshold 2 :\n",
       "2  singletons found.\n",
       "1  cliques found\n",
-      "Size: 2 - {0, 1}\n",
-      "For threshold 3 :\n",
-      "0  singletons found.\n",
-      "1  cliques found\n",
-      "Size: 2 - {2, 3}\n",
-      "--- Reached completion at threshold iteration 2 ---\n"
+      "Size: 2 - {0, 1}\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-42e61a404d97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcliques_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msingletons_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mref_mat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbottom_up_cliques\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"clique84009/84009.clique\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-79d9e0f33491>\u001b[0m in \u001b[0;36mbottom_up_cliques\u001b[0;34m(path, iter_, clean_up)\u001b[0m\n\u001b[1;32m    116\u001b[0m                     \u001b[0mcliques\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msingleton\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclose_sketch\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m                     \u001b[0mclique_thresh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msingleton\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclose_sketch\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m                     \u001b[0mreference_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclique_thresh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msingleton\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclique_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m                     \u001b[0mreference_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclique_thresh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclose_sketch\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclique_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
      ]
     }
    ],
    "source": [
-    "cliques_, singletons_, ref_mat = bottom_up_cliques(\"clique84009/84009.clique\", 4)"
+    "cliques_, singletons_, ref_mat = bottom_up_cliques(\"clique84009/84009.clique\", 2)"
    ]
   },
   {
@@ -1221,23 +1228,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 19,
    "id": "41a21c19",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{1, 2}"
-      ]
-     },
-     "execution_count": 687,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 / 3 done\n"
+     ]
     }
    ],
    "source": [
-    "set([1,2])"
+    "i = 2\n",
+    "all_paths = [1,2,3]\n",
+    "\n",
+    "print(i, \"/\", len(all_paths), \"done\")"
    ]
   }
  ],
