--- a/New code/DCSS/Experiments for column subset selection.ipynb
+++ b/New code/DCSS/Experiments for column subset selection.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "5e411ed5",
+   "execution_count": 165,
+   "id": "4ebebf08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "            f.write('\\n')\n",
     "\n",
     "def choose_sequences(path):\n",
-    "    fasta_path = path.split('.')[0]+'.fasta'\n",
+    "    fasta_path = path.split('.')[0]+'.clique.fasta'\n",
     "    \n",
     "    red, fas, mem, deg, connected_to = reduce_bit_matrix(path)\n",
     "    chosen, connections = first_pass(red, fas, deg)\n",
@@ -150,26 +150,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "a29cd0eb",
+   "execution_count": 166,
+   "id": "89f23d48",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "82040.tsv done...\n"
+      "82040.clique.tsv done...\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(33, 6)"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "reduced, chosen, conn, degs, mem = choose_sequences('82040.tsv')"
+    "reduced, chosen, conn, degs, mem = choose_sequences('82040.clique.tsv')\n",
+    "reduced.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "27c01b7d",
+   "id": "75b084e4",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "908ca12d",
+   "id": "2ca85272",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acddf38a",
+   "id": "06efe4ba",
    "metadata": {},
    "source": [
     "Eflaust pínku bull en fyrir n sæta tvíundatölu k, þá kemur talan k næst aftur fyrir í tölunni k+2^n.\n",
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11883bcc",
+   "id": "97e17a71",
    "metadata": {},
    "source": [
     "Hvað einkennir góðar niðurstöður hér?\n",
