--- a/New code/CliqueMaking/Making cliques.ipynb
+++ b/New code/CliqueMaking/Making cliques.ipynb
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b268d8ad",
    "metadata": {},
    "outputs": [
@@ -993,6 +993,7 @@
      "output_type": "stream",
      "text": [
       "2.821986824501685\n",
+      "3.0\n",
       "12.0\n"
      ]
     }
@@ -1000,6 +1001,7 @@
    "source": [
     "D, names = distMat(\"clique41617/41617.clique\")\n",
     "print(np.mean(D))\n",
+    "print(np.median(D))\n",
     "print(np.max(D))"
    ]
   },
