Subtle changes here and there

--- a/New code/CliqueMaking/Making cliques.ipynb
+++ b/New code/CliqueMaking/Making cliques.ipynb
@@ -9,6 +9,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "df0c6a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['46178_110',\n",
+       " '9864_110',\n",
+       " '9864_210',\n",
+       " '238038_210',\n",
+       " '255164_110',\n",
+       " '43981_210',\n",
+       " '10737_110',\n",
+       " '10737_120',\n",
+       " '10737_130']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overview = load_paths('Overview_of_cliques')[5::]\n",
+    "overview = [x.split(' ')[0] for x in overview]\n",
+    "\n",
+    "actual = load_paths('all_cliques.txt')\n",
+    "actual = [x[8:-8] for x in actual]\n",
+    "\n",
+    "allset = set()\n",
+    "duplicates = list()\n",
+    "\n",
+    "for cl in overview:\n",
+    "    if cl in allset:\n",
+    "        duplicates.append(cl)\n",
+    "    allset.add(cl)\n",
+    "    \n",
+    "duplicates"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2cf1331c",
    "metadata": {},
@@ -1248,6 +1291,14 @@
     "\n",
     "print(i, \"/\", len(all_paths), \"done\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88c7ad10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
