--- a/New code/DCSS/Deterministic Column Subset Selection.ipynb
+++ b/New code/DCSS/Deterministic Column Subset Selection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 94,
    "id": "46fe6def",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy as scp\n",
+    "import scipy.sparse as sp\n",
     "\n",
     "# Something is likely missing here, this can't be all there is to it.\n",
     "# The function supposedDCSS incorporates this function below, but I'm\n",
@@ -67,8 +68,8 @@
     "\n",
     "# An attempt to use the DCSS method from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6347249/\n",
     "# It's probably missing some vital steps...\n",
-    "def supposedDCSS(TCC,k,epsilon):\n",
-    "    TCC_svd = scp.sparse.linalg.svds(TCC, k)\n",
+    "def supposed_DCSS(TCC,k,epsilon):\n",
+    "    TCC_svd = sp.linalg.svds(TCC, k)\n",
     "    #TCC_svd = scp.sparse.linalg.svds(scp.sparse.csr_matrix(TCC), k)\n",
     "    V=pd.DataFrame(TCC_svd[2].T)\n",
     "\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 130,
    "id": "5fec29f3",
    "metadata": {},
    "outputs": [],
@@ -157,14 +158,81 @@
     "    drop = list(order[ind::])\n",
     "    return(DCSS, keep, drop)\n",
     "    \n",
-    "        \n",
+    "\n",
+    "def amended_DCSS(A, k, epsilon):\n",
+    "    n = A.shape[0]\n",
+    "    d = A.shape[1]\n",
+    "    leverage_scores = np.zeros(d)\n",
+    "    for i in range(d):\n",
+    "        leverage_scores[i] = calculate_rank_k_subspace_leverage_score(A, i, k)\n",
+    "    # Indices of columns we want to keep\n",
+    "    keep = list()\n",
+    "    levg_sum = 0\n",
+    "    # Get order of indices from highest to lowest\n",
+    "    order = np.argsort(-leverage_scores)\n",
+    "    ind = 0\n",
+    "    while(len(keep) < k):\n",
+    "        pi_i = order[ind]\n",
+    "        keep.append(pi_i)\n",
+    "        levg_sum += leverage_scores[pi_i]\n",
+    "        ind += 1\n",
+    "    keep.sort()\n",
+    "    DCSS = A[:,keep]\n",
+    "    drop = list(order[ind::])\n",
+    "    return(DCSS, keep, drop)\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 146,
+   "id": "36dbb9e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 25)\n",
+      "[11.  8. 13. 12. 15. 12.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "blue = read_bitmatrix('82040.clique.tsv')[0].astype(float)\n",
+    "\n",
+    "k = 25\n",
+    "\n",
+    "dcss1 = amended_DCSS(blue.T, k, epsilon = 3)\n",
+    "print(dcss1[0].shape)\n",
+    "print(sum(blue[dcss1[1],:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ea005aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(795, 6)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blue.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "85d06651",
    "metadata": {},
    "outputs": [
@@ -191,7 +259,7 @@
     }
    ],
    "source": [
-    "red, fas, mem = reduceBitMatrix('82040.tsv')\n",
+    "red, fas, mem = reduceBitMatrix('82040.clique.tsv')\n",
     "\n",
     "k = 1\n",
     "\n",
@@ -205,42 +273,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 43,
+   "id": "40e33603",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 32)\n",
+      "[0. 1. 0. 0. 0. 0.]\n",
+      "[[0. 1. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 5\n",
+    "\n",
+    "dcss2 = homemade_DCSS(red.T, k, epsilon = 0.1)\n",
+    "print(dcss2[0].shape)\n",
+    "print(sum(red[dcss2[2],:]))\n",
+    "print(red[dcss2[2],:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "64087cc4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 1., 1., 1., 1.],\n",
-       "       [0., 1., 1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1., 1., 0.],\n",
-       "       [1., 1., 1., 1., 0., 1.],\n",
-       "       [1., 1., 0., 1., 1., 1.],\n",
-       "       [1., 1., 1., 0., 1., 1.],\n",
-       "       [0., 0., 1., 1., 1., 1.],\n",
-       "       [1., 0., 1., 1., 1., 0.],\n",
-       "       [1., 0., 1., 1., 0., 1.],\n",
-       "       [0., 1., 1., 1., 1., 0.],\n",
-       "       [0., 1., 1., 1., 0., 1.],\n",
-       "       [1., 0., 1., 0., 1., 1.],\n",
-       "       [0., 1., 0., 1., 1., 1.],\n",
-       "       [0., 0., 1., 1., 1., 0.],\n",
-       "       [1., 0., 1., 1., 0., 0.],\n",
-       "       [1., 0., 0., 1., 0., 1.],\n",
-       "       [1., 0., 1., 0., 0., 1.],\n",
-       "       [0., 1., 0., 1., 1., 0.],\n",
-       "       [0., 1., 0., 0., 1., 1.],\n",
-       "       [0., 0., 1., 1., 0., 0.]])"
-      ]
-     },
-     "execution_count": 490,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 25)\n",
+      "[2. 1. 2. 2. 1. 2.]\n",
+      "[[1. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 1. 1. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 1. 0.]]\n"
+     ]
     }
    ],
    "source": [
-    "dcss1[0].T"
+    "k = 25\n",
+    "\n",
+    "dcss2 = amended_DCSS(red.T, k, epsilon = 0.1)\n",
+    "print(dcss2[0].shape)\n",
+    "print(sum(red[dcss2[2],:]))\n",
+    "print(red[dcss2[2],:])"
    ]
   },
   {
