--- a/New code/CliqueMaking/Making cliques.ipynb
+++ b/New code/CliqueMaking/Making cliques.ipynb
@@ -10,29 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "df0c6a1f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['46178_110',\n",
-       " '9864_110',\n",
-       " '9864_210',\n",
-       " '238038_210',\n",
-       " '255164_110',\n",
-       " '43981_210',\n",
-       " '10737_110',\n",
-       " '10737_120',\n",
-       " '10737_130']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "overview = load_paths('Overview_of_cliques')[5::]\n",
     "overview = [x.split(' ')[0] for x in overview]\n",
@@ -40,15 +21,20 @@
     "actual = load_paths('all_cliques.txt')\n",
     "actual = [x[8:-8] for x in actual]\n",
     "\n",
-    "allset = set()\n",
-    "duplicates = list()\n",
+    "new = load_paths('new_cliques.txt')\n",
+    "new = [x[8:-8] for x in new]\n",
     "\n",
-    "for cl in overview:\n",
-    "    if cl in allset:\n",
-    "        duplicates.append(cl)\n",
-    "    allset.add(cl)\n",
+    "\n",
+    "\n",
+    "just_new = set(new)-set(actual)\n",
+    "\n",
+    "new_cliques = []\n",
+    "for line in just_new:\n",
+    "    new_cliques.append('cliques/'+line+'.clique\\n')\n",
     "    \n",
-    "duplicates"
+    "with open('newest_cliques.txt', 'w') as f:\n",
+    "    for line in new_cliques:\n",
+    "        f.write(line)"
    ]
   },
   {
@@ -61,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7c715bd2",
    "metadata": {},
    "outputs": [],
